src/objects/MobileDevice__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>DeviceToken__c</fullName>
        <label>Device Token</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeviceType__c</fullName>
        <inlineHelpText>&quot;ios&quot; or &quot;android&quot;</inlineHelpText>
        <label>Device Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <label>UserId</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Mobile Device</label>
</CustomObject>